--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sitio web de ropa original oversize Enlighted">
-    <meta name="keywords" content="Ropa, Vestimenta, Indumentaria, Gotico, Skate, Oversize">
+    <meta name="description" content="Tienda de ropa estilo gotico. Tienda de ropa estilo oversize. Tiend de ropa estilo skater. Productos mas vendidos">
+    <meta name="keywords" content="indumentaria oversize, ropa gotica, ropa skater, ropa oversize">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
@@ -40,10 +40,7 @@
                                         <a class="nav-link" href="index.html">Inicio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="pages/shorts.html">Shorts</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="pages/remeras.html">Remeras</a>
+                                        <a class="nav-link" href="pages/vestimenta.html">Vestimenta</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="pages/accesesorios.html">Accesorios</a>
@@ -67,7 +64,6 @@
             </div>
         </nav>
     </header>
-    <div>
         <main class="grid">
             <section class="izq">
                 <h1 class="h1-ultimo-drop">Ultimo Drop</h1>
@@ -109,5 +105,4 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
 </body>
-
 </html>
