--- a/pages/FAQs.html
+++ b/pages/FAQs.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Como comprar ropa. Cuando llega mi pedido.">
-<meta name="keywords" content="pedido, ropa, compra, correo">
+<meta name="description" content="Como comprar ropa. Cuando llega mi pedido. Que pasa si viene mi pedido y no estoy para recibirlo">
+<meta name="keywords" content="pedido de ropa, pedido de productos, preguntas frecuentes, preguntas en pedidos, correo">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,10 +33,7 @@
                                     <a class="nav-link" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="shorts.html">Shorts</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="remeras.html">Remeras</a>
+                                    <a class="nav-link" href="vestimenta.html">Vestimenta</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="accesesorios.html">Accesorios</a>
