--- a/pages/accesesorios.html
+++ b/pages/accesesorios.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sitio web de Ropa original. Medias goticas. Carteras negras. Gorros goticos">
-    <meta name="keywords" content="Ropa, Vestimenta, Indumentaria, Gotico, Medias goticas, Cartera, Gorro de invierno">
+    <meta name="description" content="Tienda de accesesorios y2k. Tienda de accesesorios goticos.">
+    <meta name="keywords" content="Gorros goticos, medias goticas, gafas y2k, gorros invierno, gafas para el sol">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,7 @@
             <div class="header">
                 <nav class="navbar navbar-dark">
                     <div class="container-fluid">
-                        <h1 class="accesorios">Accesesorios</h1>
+                        <h1 class="accesorios">Accesorios</h1>
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                             aria-label="Toggle navigation">
@@ -40,10 +40,7 @@
                                         <a class="nav-link" href="../index.html">Inicio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="shorts.html">Shorts</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="remeras.html">Remeras</a>
+                                        <a class="nav-link" href="vestimenta.html">Vestimenta</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="accesesorios.html">Accesorios</a>
@@ -69,57 +66,61 @@
         </div>
         </div>
     </header>
-    <main>
-        <div class="productos">
-            <div class="textos-alineados">
-                <div class="cajas">
-                    <img src="../assets/assets/cartera (1).png" alt="Cartera Enlighted" class="imagen-contendora"
-                        style="width: 215px;">
+    <main class="grid-acce">
+        <section class="izquierda">
+            <h1>Medias</h1>
+            <div class="medias-cuadros">
+                <div>
+                    <img src="/assets/assets/medias (1).png" alt="Medias-1" style="width: 250px;">
                 </div>
-                <h3>Cartera Enlighted</h3>
-                <p>$99999</p>
-            </div>
-            <div class="textos-alineados">
-                <div class="cajas">
-                    <img src="../assets/assets/mdiota (1).png" alt="Medias Enlighted" class="imagen-contendora"
-                        style="width: 290px;">
+                <div>
+                    <img src="/assets/assets/mdiota (1).png" alt="Media-2" style="width: 250px;">
                 </div>
-                <h3>Medias CUT_OSCI_NG</h3>
-                <p>$99999</p>
-            </div>
-            <div class="textos-alineados">
-                <div class="cajas">
-                    <img src="../assets/assets/medias (1).png" alt="Medias Enlighted" class="imagen-contendora"
-                        style="width: 290px;">
+                <div>
+                    <img src="/assets/assets/medias cuadrille.png" alt="Media-3" style="width: 250px;">
                 </div>
-                <h3>Medias CUT_OSCI_NG (Gris)</h3>
-                <p>$99999</p>
-            </div>
-            <div class="textos-alineados">
-                <div class="cajas">
-                    <img src="../assets/assets/mediasssss (1).png" alt="Medias Enlighted" class="imagen-contendora"
-                        style="width: 230px;">
+                <div>
+                    <img src="/assets/assets/mediasssss (1).png" alt="Media-4" style="width: 180px;">
                 </div>
-                <h3>Media NEWTRB_G</h3>
-                <p>$99999</p>
             </div>
-            <div class="textos-alineados">
-                <div class="cajas">
-                    <img src="../assets/assets/gorra (1).png" alt="Gorra Enlighted" class="imagen-contendora"
-                        style="width: 240px;">
+        </section>
+        <section class="medio1">
+            <h1>Gorros</h1>
+            <div class="medias-cuadros">
+                <div>
+                    <img src="/assets/assets/gorra (1).png" alt="Gorra-1" style="width: 250px;">
                 </div>
-                <h3>Gorra OSCI_WASH</h3>
-                <p>$99999</p>
-            </div>
-            <div class="textos-alineados">
-                <div class="cajas">
-                    <img src="../assets/assets/gorro (1).png" alt="Gorro Enlighted" class="imagen-contendora"
-                        style="width: 230px;">
+                <div>
+                    <img src="/assets/assets/gorro (1).png" alt="Gorro-2" style="width: 250px;">
                 </div>
-                <h3>OSCI_BEANIE</h3>
-                <p>$99999</p>
+                <div>
+                    <img src="/assets/assets/gorraaa-removebg-preview (1).png" alt="Gorra-3" style="width: 250px;">
+                </div>
+                <div>
+                    <img src="/assets/assets/gorroooo-removebg-preview.png" alt="Gorra-3" style="width: 250px;">
+                </div>
+        </section>
+        <section class="derecha2">
+            <h1>Gafas</h1>
+            <div class="medias-cuadros">
+                <div>
+                    <img src="/assets/assets/gafaaas2-removebg-preview.png" alt="Gafas-1" style="width: 200px;">
+                </div>
+                <div>
+                    <img src="/assets/assets/gafas1-removebg-preview.png" alt="Gafas-2" style="width: 200px;">
+                </div>
+                <div>
+                    <img src="/assets/assets/gafas3-removebg-preview.png" alt="Gafas-3" style="width: 200px;">
+                </div>
+                <div>
+                    <img src="/assets/assets/gafones-removebg-preview.png" alt="Gafas-4" style="width: 200px;">
+                </div>
+        </section>
+        <section class="garantia2">
+            <div class="cajas-garantia">
+                <p">Todos nuestros productos cuentan con garantia!</p>
             </div>
-        </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
