--- a/pages/como-comprar.html
+++ b/pages/como-comprar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Compra de ropa. Instructivo compra de ropa. Guia de como comprar en nuestro sitio web. Metodos de envios">
-    <meta name="keywords" content="Comprar ropa, envios">
+    <meta name="keywords" content="Comprar ropa, envios, seguridad en compras, guia de compra">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
@@ -40,10 +40,7 @@
                                         <a class="nav-link" href="../index.html">Inicio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="shorts.html">Shorts</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="remeras.html">Remeras</a>
+                                        <a class="nav-link" href="vestimenta.html">Vestimenta</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="accesesorios.html">Accesorios</a>
