--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -1,11 +1,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Local de ropa. Historia de marca Enlighted. Conocenos mas. Sobre nosotros. Local ropa Buenos Aires">
-<meta name="keywords" content="Local, Local de ropa, Negocio ropa">
+<meta name="description"
+  content="Local de ropa y2k. Historia de marca Enlighted. Local ropa gotica Buenos Aires.">
+<meta name="keywords" content="Indumentaria Buenos Aires, Local ropa gotica, tienda accesesorios y2k">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/styles.css">
@@ -15,75 +16,84 @@
 <header>
   <nav>
     <div class="header">
-        <nav class="navbar navbar-dark">
-            <div class="container-fluid">
-                <h1 class="sobre-nosotros1">Sobre Nosotros</h1>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                    aria-labelledby="offcanvasDarkNavbarLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Categorias</h5>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <a class="nav-link" href="../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="shorts.html">Shorts</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="remeras.html">Remeras</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="accesesorios.html">Accesorios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="FAQs.html">FAQs</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="como-comprar.html">Como comprar</a>
-                            </li>
-                        </ul>
-                        </li>
-                        </ul>
-                    </div>
-                </div>
+      <nav class="navbar navbar-dark">
+        <div class="container-fluid">
+          <h1 class="sobre-nosotros1">Sobre Nosotros</h1>
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+            aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+            aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Categorias</h5>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                aria-label="Close"></button>
             </div>
-        </nav>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="vestimenta.html">Vestimenta</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="accesesorios.html">Accesorios</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="FAQs.html">FAQs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="como-comprar.html">Como comprar</a>
+                </li>
+              </ul>
+              </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
     </div>
-</nav>
+  </nav>
 </header>
 
-<body>
-  <div>
-  <font size="5">
-    <p class="separacion">Somos una compañía de produccion de ropa de primera marca y queremos pisar con un estilo innovador
-      para nuevas modas. <br>Ademas de que estamos constantemente trajando para conseguir tu mayor comodidad y gusto.
-    </p>
-  </font>
-  <div>
-    <font size="6">
-      <b>
-        <p align="center">Tambien podes ver nuestro instagram para conocer nuestro local:</p>
-      </b>
-    </font>
-    <div class="imagen-centrada">
+<body class="body-nosotros">
+  <section class="grid-nosotros">
+    <div class="ofrecemos">
+      <h2 class="centro">
+        Nosotros te ofrecemos lo siguiente:
+      </h2>
+    </div>
+    <div class="ofrecimiento">
+      <div class="cajas-ofrecimiento">
+        <img src="/assets/assets/mail-icon_8056408.png" alt="Mail-Icon">
+        <p>Contacto directo y rapido!</p>
+      </div>
+      <div class="cajas-ofrecimiento">
+        <img src="/assets/assets/globe_7192499.png" alt="Mundo-Icon">
+        <p>Envios a todo el mundo.</p>
+      </div>
+      <div class="cajas-ofrecimiento">
+        <img src="/assets/assets/padlock_3064155.png" alt="Candado-Icon">
+        <p>Seguridad maxima.</p>
+      </div>
+    </div>
+    <div class="info">
+      <p>Somos una compañía de produccion de ropa de primera marca y queremos pisar con un estilo
+        innovador
+        para nuevas modas. <br>Ademas de que estamos constantemente trajando para conseguir tu mayor comodidad y
+        gusto. <br> Nuestro Instagram:
+      </p>
       <a href="https://www.instagram.com/enlightedclothing/" target="_blank">
-        <img class="instagram" src="../assets/assets/iggg.png" alt="Instagram">
+        <img src="/assets/assets/iggg.png" alt="Instagram-icon" class="instagram-logo">
       </a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-crossorigin="anonymous"></script>
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
 </body>
 </div>
