--- a/pages/vestimenta.html
+++ b/pages/vestimenta.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sitio web remeras. Remeras oversize. Remeras goticas">
-    <meta name="keywords" content="Ropa, Vestimenta, Indumentaria, Gotico, Remeras Oversize">
+    <meta name="description" content="Sitio web remeras y shorts oversize. Sitio web de vestimenta gotica">
+    <meta name="keywords" content="Remeras oversize, Shorts oversize, Indumentaria gotica, Tienda de ropa oversize">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,7 @@
             <div class="header">
                 <nav class="navbar navbar-dark">
                     <div class="container-fluid">
-                        <h1 class="remeras1">Remeras</h1>
+                        <h1 class="remeras1">Vestimenta</h1>
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                             aria-label="Toggle navigation">
@@ -40,10 +40,7 @@
                                         <a class="nav-link" href="../index.html">Inicio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="shorts.html">Shorts</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="remeras.html">Remeras</a>
+                                        <a class="nav-link" href="vestimenta.html">Vestimenta</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="accesesorios.html">Accesorios</a>
@@ -113,6 +110,49 @@
                 <h3>Remera ESENCIA</h3>
                 <p>$99999</p>
             </div>
+            <div class="textos-alineados">
+                <div class="cajas">
+                    <img src="../assets/assets/short blanco.png" alt="Short 0kay_Bl" class="imagen-contendora">
+                </div>
+                <h3>Short 0kay_Bl</h3>
+                <p>$99999</p>
+            </div>
+            <div class="textos-alineados">
+                <div class="cajas">
+                    <img src="../assets/assets/short verde.png" alt="Short Broken" class="imagen-contendora">
+                </div>
+                <h3>Short Broken</h3>
+                <p>$99999</p>
+            </div>
+            <div class="textos-alineados">
+                <div class="cajas">
+                    <img src="../assets/assets/short grids.png" alt="Short Mon:90" class="imagen-contendora">
+                </div>
+                <h3>Short Mon:90</h3>
+                <p>$99999</p>
+            </div>
+            <div class="textos-alineados">
+                <div class="cajas">
+                    <img src="../assets/assets/short logout.png" alt="Short Logout" class="imagen-contendora">
+                </div>
+                <h3>Short Logout</h3>
+                <p>$99999</p>
+            </div>
+            <div class="textos-alineados">
+                <div class="cajas">
+                    <img src="../assets/assets/falda eclipse.png" alt="Falda Eclipse" class="imagen-contendora">
+                </div>
+                <h3>Falda Eclipse</h3>
+                <p>$99999</p>
+            </div>
+            <div class="textos-alineados">
+                <div class="cajas">
+                    <img src="../assets/assets/ocean 2.png" alt="Short 0cean 2.0" class="imagen-contendora">
+                </div>
+                <h3>Short 0cean 2.0</h3>
+                <p>$99999</p>
+            </div>
+        </div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
